Svelte conversion: - Fix collapsed class

--- a/twitch-bingo-extension/src/components/VideoOverlay/OverlayBingoGrid.scss
+++ b/twitch-bingo-extension/src/components/VideoOverlay/OverlayBingoGrid.scss
@@ -12,7 +12,7 @@
 
 .collapsed
 {
-    opacity: 0.0;
+    opacity: 0.0 !important;
 }
 
 .gridHeaderBox
